# exqudens-cpp-usb

./: CMakeLists.txt  CMakePresets.json  conanfile.py  name-version.txt  package-config.cmake.in  readme.md  test-conanfile.py
cmake/: vscode.cmake
src/main/cpp/exqudens/usb/: Client.cpp  Client.hpp  ClientFactory.cpp  ClientFactory.hpp  IClient.hpp
src/test/cpp/: TestApplication.cpp  TestApplication.hpp  TestConfig.cpp  TestConfig.hpp  TestLog.cpp  TestLog.hpp  TestUtils.cpp  TestUtils.hpp
src/test/cpp/system/: IClientSystemTests.hpp
src/test/cpp/unit/: IClientUnitTests.hpp
src/test/resources/: logging-config.txt
src/test/resources/vscode/: command-variable-launch.json
